--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,44 @@
-# Temporary files and binaries
+# Created by https://www.toptal.com/developers/gitignore/api/c++
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++
+
+### C++ ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# End of https://www.toptal.com/developers/gitignore/api/c++
+
 temp**
-**.o
-**.exe
-
-# Testing files
-test**.**
-is_it_ok.sh
-testdir/**
-
-# Tools and utils
-vhdl-tool**
-options
-licence**
-
-# Other
 **-private**
 **.odt
-**.zip
-**.tar.gz
+**.tar
 **x???????**
