--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
      "editor.insertSpaces": true,
      "editor.detectIndentation": true,
      "telemetry.enableTelemetry": false,
-     "conventionalCommits.scopes": ["srv", "cli", "core"]
+     "conventionalCommits.scopes": [
+          "srv",
+          "cli",
+          "core",
+          "tests"
+     ]
 }
